Non functional JOOQ integration